--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -1,7 +1,9 @@
 .navbar-fixed {
   width: 100%;
   height: 64px;
-  background-color: #263238;
+  /* background-color: #263238; */
+  background-color: white;
+  z-index: 100;
   position: fixed;
 }
 
@@ -16,20 +18,19 @@
   max-width: 42rem;
 }
 
-.brand-logo,
-.nav-link {
-  color: #ffffff;
+.brand-logo {
+  color: #ff4f00;
 }
 
 .nav-link {
   box-shadow: none;
   padding: 0.5rem 0.8rem;
   border-radius: 5px;
+  color: rgba(0, 0, 0, 0.9);
 }
 
 .nav-link:hover {
   background-color: rgba(103, 135, 151, 0.3);
-  color: white;
   transition: background-color 0.5s;
 }
 
@@ -38,10 +39,7 @@
   position: absolute;
   display: inline-block;
   font-size: 2.1rem;
-}
-
-.brand-logo:hover {
-  color: #ffffff;
+  box-shadow: none;
 }
 
 .nav-links {
@@ -49,6 +47,7 @@
   padding-left: 0;
   position: relative;
   float: right;
+  margin: 0;
 }
 
 .nav-links li {
@@ -58,4 +57,10 @@
 
 .nav-links li:last-of-type {
   margin-right: 0;
+}
+
+.bottom-shadow {
+  -webkit-box-shadow: 1px 2px 18px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: 1px 2px 18px rgba(0, 0, 0, 0.4);
+  box-shadow: 1px 2px 18px rgba(0, 0, 0, 0.4);
 }
