--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,10 +1,10 @@
 a {
-  color: #f57c00;
+  color: #ff4f00;
   font-weight: bold;
 }
 
 a:hover {
-  color: #ffa726;
-  -webkit-transition: color 0.2s; /* safari */
-  transition: color 0.2s;
+  opacity: 0.8;
+  -webkit-transition: opacity 0.2s; /* safari */
+  transition: opacity 0.2s;
 }
