--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -1,20 +1,22 @@
 .navbar-fixed {
   width: 100%;
-  height: 64px;
+  height: 122px;
   /* background-color: #263238; */
   background-color: white;
   z-index: 100;
   position: fixed;
+  transition: height 0.3s;
 }
 
 .nav-wrapper {
-  height: 64px;
-  line-height: 64px;
+  height: 100%;
+  line-height: 122px;
   width: 100%;
+  transition: line-height 0.3s;
 }
 
 .container {
-  margin: 0 auto;
+  margin: auto;
   max-width: 42rem;
 }
 
@@ -63,4 +65,14 @@
   -webkit-box-shadow: 1px 2px 18px rgba(0, 0, 0, 0.4);
   -moz-box-shadow: 1px 2px 18px rgba(0, 0, 0, 0.4);
   box-shadow: 1px 2px 18px rgba(0, 0, 0, 0.4);
+}
+
+.navbar-scroll {
+  height: 64px;
+  transition: height 0.3s;
+}
+
+.navbar-scroll .nav-wrapper {
+  line-height: 64px;
+  transition: line-height 0.3s;
 }
