--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,3 +8,12 @@ a:hover {
   -webkit-transition: opacity 0.2s; /* safari */
   transition: opacity 0.2s;
 }
+
+article ul {
+  margin-left: 25px;
+}
+
+article h2 {
+  padding-bottom: 0.75rem;
+  box-shadow: inset 0 -0.175em white, inset 0 -0.2em rgba(0, 0, 0, 0.4);
+}
