--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -20,3 +20,13 @@ article h2 {
   padding-bottom: 0.75rem;
   box-shadow: inset 0 -0.175em white, inset 0 -0.2em rgba(0, 0, 0, 0.4);
 }
+
+@media screen and (max-width: 530px) {
+  #bio-picture {
+    display: none;
+  }
+
+  #bio-text {
+    width: 100% !important;
+  }
+}
