--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,4 @@
-@import "https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css";
+@import "https://cdn.jsdelivr.net/gh/devicons/devicon@v2.8.2/devicon.min.css";
 
 a {
   color: #ff4f00;
