--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,6 +1,9 @@
 .custom-footer {
-  line-height: 122px;
-  height: 122px;
+  background-color: #253031;
+}
+
+.custom-footer .container {
+  position: relative;
 }
 
 .divider {
@@ -20,19 +23,27 @@
 }
 
 .custom-footer .message {
-  float: left;
+  position: relative;
+  left: 0;
+  width: 50%;
+  color: #ffffff;
+  display: inline-block;
 }
 
 .custom-footer .icon-group {
-  float: right;
   height: 100%;
   position: relative;
+  right: 0;
+  width: 50%;
+  text-align: right;
+  display: inline-block;
 }
 
 .custom-footer .icon-group a {
   display: inline-block;
   margin-left: 1rem;
   width: 2rem;
+  color: unset;
 }
 
 .custom-footer .icon-group a:first-of-type {
@@ -52,10 +63,12 @@
     line-height: 61px;
   }
   .custom-footer .message {
-    width: 100%;
     margin: 0 auto;
+    width: 100%;
     height: 50%;
     text-align: center;
+    left: 0;
+    position: relative;
   }
 
   .custom-footer .icon-group {
