--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 122px;
   /* background-color: #263238; */
-  background-color: white;
+  background-color: var(--bg);
   z-index: 100;
   position: fixed;
   transition: height 0.3s;
@@ -21,7 +21,7 @@
 }
 
 .brand-logo {
-  color: #ff4f00;
+  color: var(--textLink);
   padding: 0 0.8rem;
 }
 
@@ -29,7 +29,7 @@
   box-shadow: none;
   padding: 0.5rem 0.8rem;
   border-radius: 5px;
-  color: rgba(0, 0, 0, 0.9);
+  color: var(--textNormal);
 }
 
 .nav-link:hover {
@@ -61,6 +61,12 @@
 
 .nav-links li:last-of-type {
   margin-right: 0;
+}
+
+@media screen and (max-width: 530px) {
+  .nav-links li:last-of-type {
+    margin-right: 1rem;
+  }
 }
 
 .bottom-shadow {
