--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,7 +1,26 @@
 @import "https://cdn.jsdelivr.net/gh/devicons/devicon@v2.8.2/devicon.min.css";
+body {
+  --bg: white;
+  --textNormal: #222;
+  --textTitle: #222;
+  --textLink: #ff4f00;
+  --hr: hsla(0, 0%, 0%, 0.2);
+
+  background-color: var(--bg);
+  color: var(--textNormal);
+}
+
+body.dark {
+  -webkit-font-smoothing: antialiased;
+
+  --bg: #253031;
+  --textNormal: rgba(255, 255, 255, 0.88);
+  --textTitle: white;
+  --hr: hsla(0, 0%, 100%, 0.2);
+}
 
 a {
-  color: #ff4f00;
+  color: var(--textLink);
   font-weight: bold;
   box-shadow: none;
 }
