--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,7 @@
 @import "https://cdn.jsdelivr.net/gh/devicons/devicon@v2.8.2/devicon.min.css";
 body {
   --bg: white;
+  --altBg: #253031;
   --textNormal: #222;
   --textTitle: #222;
   --textLink: #ff4f00;
@@ -14,6 +15,7 @@ body.dark {
   -webkit-font-smoothing: antialiased;
 
   --bg: #253031;
+  --altBg: #3e5153;
   --textNormal: rgba(255, 255, 255, 0.88);
   --textTitle: white;
   --hr: hsla(0, 0%, 100%, 0.2);
