--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -42,6 +42,11 @@ article h2 {
   box-shadow: inset 0 -0.175em white, inset 0 -0.2em rgba(0, 0, 0, 0.4);
 }
 
+mark {
+  background: var(--altBg);
+  border-radius: 0.2rem;
+}
+
 @media screen and (max-width: 530px) {
   #bio-picture {
     display: none;
