--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -41,7 +41,7 @@ article ul {
 
 article h2 {
   padding-bottom: 0.75rem;
-  box-shadow: inset 0 -0.175em white, inset 0 -0.2em rgba(0, 0, 0, 0.4);
+  box-shadow: inset 0 -0.175em #f0f0f0, inset 0 -0.2em rgba(0, 0, 0, 0.4);
 }
 
 mark {
